--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
-				<input id="new-todo" placeholder="What needs to be done?" autofocus>
+				<div id="new-todo-container">
+					<input id="new-todo" placeholder="What needs to be done?" autofocus>
+					<button id="new-priority" class="priority-btn"></button>
+				</div>
 			</header>
 			<section id="main">
 				<input id="toggle-all" type="checkbox">
