--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 				<label><%- title %><%= completed ? ' -- done!' : '' %></label>
+				<% if (!completed) { %>
 				<button class="priority-btn"></button>
+				<% } %>
 				<button class="edit-btn"></button>
 				<button class="destroy"></button>
 			</div>
