--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 					<a href="#/active">Active</a>
 				</li>
 				<li>
+					<a href="#/priority">Priority</a>
+				</li>
+				<li>
 					<a href="#/completed">Completed</a>
 				</li>
 			</ul>
